<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020, Shashank Verma (shank03) <shashank.verma2002@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="g"
            android:title="@string/gesture">

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_outline_touch_app_24"
            android:key="glove_mode"
            android:summary="@string/glove_mode_summary"
            android:title="@string/glove_mode" />

         <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_outline_touch_app_24"
            android:key="smart_stamina_mode"
            android:summary="@string/smart_stamina_summary"
            android:title="@string/smart_stamina_mode" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cs"
        android:title="@string/customization_selector">

        <Preference
            android:icon="@drawable/ic_outline_info"
            android:key="cs_status"
            android:summary="Show modem status"
            android:title="@string/status" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_outline_wifi_calling_24"
            android:key="cs_ims"
            android:summary="@string/ims_summary"
            android:title="@string/ims_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_outline_notifications_active_24"
            android:key="cs_notification"
            android:summary="@string/sony_modem_notification_summary"
            android:title="@string/sony_modem_notification" />

        <Preference
            android:icon="@drawable/ic_round_open"
            android:key="modem_sw"
            android:summary="@string/modem_switcher_activity_summary"
            android:title="@string/modem_switcher_activity" />

        <Preference
            android:icon="@drawable/ic_round_notes"
            android:key="cs_log"
            android:summary="@string/logs_summary"
            android:title="@string/logs" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="ns"
        android:title="@string/network_switcher">

        <Preference
            android:icon="@drawable/ic_outline_sim_card_24"
            android:key="ns_slot"
            android:defaultValue="-1"
            android:summary="@string/sim_slot_summary"
            android:title="@string/sim_slot" />

        <SwitchPreference
            android:defaultValue="false"
            android:enabled="false"
            android:icon="@drawable/ic_round_import_export_24"
            android:key="ns_service"
            android:summary="@string/ns_summary"
            android:title="@string/network_switcher_service" />

        <Preference
            android:icon="@drawable/ic_round_import_export_24"
            android:key="ns_lowNet"
            android:defaultValue="3"
            android:summary="@string/lower_network_summary"
            android:title="@string/lower_network" />

    </PreferenceCategory>

</PreferenceScreen>
